--- a/web/static/templates/modal_lecturer.html
+++ b/web/static/templates/modal_lecturer.html
@@ -75,9 +75,9 @@
                                     <div class="collapse" id="cC{{id}}">
                                         <div class="well">
                                             {{#course_editions_conducted}}
-                                            <a>
-                                                {{course_name}} {{term_id}}
-                                            </a>
+                                            <p>
+                                                {{course_name}}, {{term_id}}
+                                            </p>
                                             <br>
                                             {{/course_editions_conducted}}
                                         </div>
