--- a/web/static/templates/modal_user.html
+++ b/web/static/templates/modal_user.html
@@ -7,50 +7,52 @@
                 <h4 class="modal-title" id="userModalLabel">{{first_name}} {{first_name}}</h4>
             </div>
             <div class="modal-body" id="userBody{{user_id}}">
+                <div class="media">
+                    <div class="media-left">
+                        <a href="#">
+                            {{#if has_photo}}
+                            <img class="media-object" src="{{has_photo}}" alt="...">
+                            {{/if}}
+                        </a>
+                    </div>
+                <div class="media-body">
                 <table>
                     <tbody>
                     <tr>
-                        <td>
-                            <table class="table table-strip table-responsive">
-                                <tr>
-                                    <td>Status studenta</td>
-                                    <td>{{student_status}}</td>
-                                </tr>
-                                {{#if student_number}}
-                                <tr>
-                                    <td>Numer indeksu</td>
-                                    <td>{{student_number}}</td>
-                                </tr>
-                                {{/if}}
-                                {{#if user_email}}
-                                <tr>
-                                    <td>Email</td>
-                                    <td>{{user_email}}</td>
-                                </tr>
-                                {{/if}}
-                                {{#if student_programmes}}
-                                <tr>
-                                    <td>Kierunki</td>
-                                    <td></td>
-                                </tr>
-                                {{#student_programmes}}
-                                <tr>
-                                    <td>{{id}}</td>
-                                    <td>{{programme.description}} ({{programme.id}})</td>
-                                </tr>
-                                {{/student_programmes}}
-                                {{/if}}
-                            </table>
-                        <td>
-                            {{#if has_photo}}
-                            <div class="img-thumbnail">
-                                <img src="{{has_photo}}">
-                            </div>
-                        </td>
-                        {{/if}}
+                        <table class="table table-strip table-responsive">
+                            <tr>
+                                <td>Status studenta</td>
+                                <td>{{student_status}}</td>
+                            </tr>
+                            {{#if student_number}}
+                            <tr>
+                                <td>Numer indeksu</td>
+                                <td>{{student_number}}</td>
+                            </tr>
+                            {{/if}}
+                            {{#if user_email}}
+                            <tr>
+                                <td>Email</td>
+                                <td>{{user_email}}</td>
+                            </tr>
+                            {{/if}}
+                            {{#if student_programmes}}
+                            <tr>
+                                <td>Kierunki</td>
+                                <td></td>
+                            </tr>
+                            {{#student_programmes}}
+                            <tr>
+                                <td>{{id}}</td>
+                                <td>{{programme.description}} ({{programme.id}})</td>
+                            </tr>
+                            {{/student_programmes}}
+                            {{/if}}
+                        </table>
                     </tr>
                     </tbody>
                 </table>
+                </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Zamknij</button>
