--- a/web/static/templates/modal_course.html
+++ b/web/static/templates/modal_course.html
@@ -1,11 +1,10 @@
-<div class="modal fade" id="courseModal{{courseId}}" tabindex="-1" role="dialog"
-     aria-labelledby="lecturerModalLabel">
+<div class="modal fade" id="courseModal{{courseId}}" tabindex="-1" role="dialog" aria-labelledby="courseModalLabel">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
                         aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="lecturerModalLabel">{{name}} ({{course_id}})</h4>
+                <h4 class="modal-title" id="courseModalLabel">{{name}} ({{course_id}})</h4>
             </div>
             <div class="modal-body">
                 <div class="media">
@@ -120,9 +119,17 @@
                             <tr>
                                 <td>Studenci</td>
                                 <td>
-                                    {{#participants}}
-                                    {{last_name}} {{first_name}},
-                                    {{/participants}}
+                                    <div class="collapse" id="u{{user_id}}">
+                                        <div class="well">
+                                            {{#participants}}
+                                            <p>{{last_name}} {{first_name}}</p>
+                                            {{/participants}}
+                                        </div>
+                                    </div>
+                                    <a class="btn btn-default collapsed" data-toggle="collapse" href="#u{{user_id}}">
+                                        <span class="if-collapsed">Pokaż studentów</span>
+                                        <span class="if-not-collapsed">Ukryj studentów</span>
+                                    </a>
                                 </td>
                             </tr>
                             {{/if}}
@@ -130,8 +137,6 @@
                         </table>
                     </div>
                 </div>
-
-
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Zamknij</button>
