--- a/web/static/templates/index.html
+++ b/web/static/templates/index.html
@@ -5,8 +5,8 @@
       <div class="cover-container">
 
         <div class="inner cover">
-            <h1 class="cover-heading">Kujon - studencka wymiana wiedzy</h1>
-            <p class="lead">Kujon to system pozwalający na przeglądanie danych na smartphonie, integrację z USOS oraz wymianę kontaktów i danych studenckich. Integrujemy się z Facebookiem oraz z 21 największymi polskimi uczelniami..</p>
+            <h1 class="cover-heading">Kujon.mobi - studencka wymiana wiedzy</h1>
+            <p class="lead">Kujon to system pozwalający na przeglądanie danych USOS na smartphonie, wymianę danych oraz komunikację. Integrujemy się z Facebookiem oraz z największymi polskimi uczelniami.</p>
             <table class="table">
                 <tr><td><img src="/static/img/logo/logo-pb-64x64.jpg" title="Politechnika Białostocka"></td>
                     <td><img src="/static/img/logo/logo-pw-64x64.jpg" title="Politechnika Warszawska"></td>
@@ -31,12 +31,8 @@
                     <td><img src="/static/img/logo/logo-utp-64x64.jpg" title="Uniwersytet Technologiczno-Przyrodniczy w Bydgoszczy"></td>
                     <td><img src="/static/img/logo/logo-uwm-64x64.jpg" title="Uniwersytet Warmińsko-Mazurski w Olsztynie"></td>
                     <td><img src="/static/img/logo/logo-uth-64x64.jpg" title="Uczelnia Techniczno-Handlowa im. Heleny Chodkowskiej"></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
                 </tr>
             </table>
-                    <p class="lead">a jeżeli nie ma Twojej uczelni to zerknij tu..</p>
         </div>
 
         <div class="container">
@@ -44,24 +40,24 @@
 
             <div class="inner cover ">
               <h1 class="cover-heading">Pobierz wersję mobilną</h1>
-              <p class="lead">Kujona możesz mieć na dowolnym spartfonie i w przeglądarce.. wybierz wersję która Cię interesuje..</p>
+              <p class="lead">Kujona możesz mieć na dowolnym spartfonie i w przeglądarce.</p>
             </div>
 
 
             <div class="col-md-4">
-                <a class="link-name" href="https://itunes.apple.com/pl/app/io.kujon"  >
+                <a class="link-name" href="https://itunes.apple.com/pl/app/mobi.kujon"  >
                     <div class="text-box" role="group">
                         <div class="text" role="textbox" >
-                          <p><a href="https://play.google.com/store/apps/details?id=io.kujon" target="_blank"><img src="/static/img/pobierz-z-google-play.png" alt="" /></a>
+                          <p><a href="https://play.google.com/store/apps/details?id=mobi.kujon" target="_blank"><img src="/static/img/pobierz-z-google-play.png" alt="" /></a>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-md-4">
-                <a class="link-name" href="https://play.google.com/store/apps/details?id=io.kujon"  >
+                <a class="link-name" href="https://play.google.com/store/apps/details?id=mobi.kujon"  >
                     <div class="text-box" role="group">
                         <div class="text" role="textbox" >
-                          <p><a href="https://play.google.com/store/apps/details?id=io.kujon" target="_blank"><img src="/static/img/pobierz-z-app-store.png" alt="" /></a>
+                          <p><a href="https://play.google.com/store/apps/details?id=mobi.kujon" target="_blank"><img src="/static/img/pobierz-z-app-store.png" alt="" /></a>
                         </div>
                     </div>
                 </a>
