index.js cleanup

--- a/web/static/templates/index.html
+++ b/web/static/templates/index.html
@@ -4,7 +4,7 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Kujon.mobi - studencka wymiana wiedzy</h2>
+                <h2 class="page-header">{{PROJECT_TITLE}} - studencka wymiana wiedzy</h2>
                 <p class="lead">Kujon to system pozwalający na przeglądanie danych USOS na smartphonie, wymianę danych
                     oraz komunikację. Integrujemy się z Facebookiem oraz z największymi polskimi uczelniami.</p>
             </div>
@@ -154,8 +154,8 @@
         <div class="row">
 
             <div class="inner cover ">
-                <h1 class="cover-heading">Pobierz wersję mobilną</h1>
-                <p class="lead">Kujona możesz mieć na dowolnym spartfonie i w przeglądarce.</p>
+                <h2 class="cover-heading">Pobierz wersję mobilną</h2>
+                <p class="lead">Z {{PROJECT_TITLE}} możesz korzystać na spartfonie i w dowolnej przeglądarce.</p>
             </div>
 
 
@@ -188,13 +188,6 @@
             <!--</div>-->
             <!--</a>-->
             <!--</div>-->
-        </div>
-
-        <div class="mastfoot">
-            <div class="inner">
-                <br>
-                <p>(c) kujon.io 2016</p>
-            </div>
         </div>
 
     </div>
