--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -22,7 +22,6 @@
 </head>
 
 <body>
-
 <!-- navigation -->
 <div id="navigation">
 </div>
@@ -32,6 +31,17 @@
 <div id="page" class="container">
 </div>
 
+<footer class="footer">
+  <div class="container text-center">
+      <p class="text-muted">
+            {{PROJECT_TITLE}} © 2016 |
+            <a href="#disclaimer">regulamin </a> |
+            <a href="mailto:kujon@kujon.mobi"><i class="fa fa-envelope"></i></a> |
+            <a href="https://facebook.com/kujon.mobi"><i class="fa fa-facebook"></i></a> |
+            <a href="https://play.google.com/store/apps/details?id=mobi.kujon"><i class="fa fa-android"></i></a>
+       </p>
+  </div>
+</footer>
 </body>
 
 </html>
