--- a/web/static/templates/home.html
+++ b/web/static/templates/home.html
@@ -3,7 +3,7 @@
       <div class="cover-container">
         <div class="inner cover">
             <h1 class="cover-heading">Kujon - Witamy </h1>
-            <p class="lead">todo..</p>
+            <p class="lead">todo todo..</p>
       </div>
     </div>
 </div>
