--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -31,6 +31,8 @@
 <div id="page" class="container">
 </div>
 
+{% block main %} {% end %}
+
 <footer class="footer">
   <div class="container text-center">
       <p class="text-muted">
