--- a/web/static/templates/disclaimer.html
+++ b/web/static/templates/disclaimer.html
@@ -7,7 +7,7 @@
                     <div class="entry">
 
                         <p>Witamy w kujon od ........ Sp. z o.o., z siedzibą w Warszawie (..-..), Polsce,
-                            przy ul. ....., KRS: ...., NIP: ,........., (“<strong>Firma</strong>” lub
+                            przy ul. ....., KRS: ......., NIP: ,........., (“<strong>Firma</strong>” lub
                             “<strong>My</strong>”).</p>
 
                         <p>Korzystając z aplikacji Kujon lub strony internetowej pod adresem kujon.mobi (wspólnie
