--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -8,13 +8,13 @@
 
     <link href="{{ static_url('bower_components/bootstrap/dist/css/bootstrap.min.css') }}" rel="stylesheet">
     <link href="{{ static_url('bower_components/font-awesome/css/font-awesome.min.css') }}" rel="stylesheet">
-    <link href="{{ static_url('bower_components/DataTables-1.10.11/css/jquery.dataTables.min.css') }}" rel="stylesheet">
+    <link href="{{ static_url('bower_components/datatables/media/css/jquery.dataTables.min.css') }}" rel="stylesheet">
 
 
     <link href="{{ static_url('css/main.css') }}" rel="stylesheet">
     <link rel="shortcut icon" href="{{ static_url('favicon.ico') }}">
 
-    <link rel="stylesheet" href="{{ static_url('bower_components/fullcalendar/fullcalendar.min.css') }}" />
+    <link rel="stylesheet" href="{{ static_url('bower_components/fullcalendar/dist/fullcalendar.min.css') }}"/>
 
     <script type="text/javascript" src="{{ static_url('require.config.js') }}"></script>
     <script type="text/javascript" data-main="{{ static_url('js/startup.js') }}"
