--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -6,28 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>{{PROJECT_TITLE}}</title>
 
-    <link href="{{ static_url('bower_components/bootstrap/dist/css/bootstrap.min.css') }}" rel="stylesheet">
-    <link href="{{ static_url('bower_components/font-awesome/css/font-awesome.min.css') }}" rel="stylesheet">
-    <link href="{{ static_url('bower_components/datatables/media/css/jquery.dataTables.min.css') }}" rel="stylesheet">
+    <link href="/static/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/static/bower_components/datatables/media/css/jquery.dataTables.min.css" rel="stylesheet">
+    <link href="/static/css/main.css" rel="stylesheet">
+    <link rel="shortcut icon" href="/static/favicon.ico">
+    <link rel="stylesheet" href="/static/bower_components/fullcalendar/dist/fullcalendar.min.css"/>
 
-
-    <link href="{{ static_url('css/main.css') }}" rel="stylesheet">
-    <link rel="shortcut icon" href="{{ static_url('favicon.ico') }}">
-
-    <link rel="stylesheet" href="{{ static_url('bower_components/fullcalendar/dist/fullcalendar.min.css') }}"/>
-
-    <script type="text/javascript" src="{{ static_url('require.config.js') }}"></script>
-    <script type="text/javascript" data-main="{{ static_url('js/startup.js') }}"
-            src="{{ static_url('bower_components/requirejs/require.js') }}"></script>
+    <script type="text/javascript" src="/static/require.config.js"></script>
+    <script type="text/javascript" data-main="/static/js/startup.js"
+            src="/static/bower_components/requirejs/require.js"></script>
 </head>
 
 <body>
-<!-- navigation -->
+
 <div id="navigation">
 </div>
 
-
-<!-- pages -->
 <div id="page" class="container">
 </div>
 
