--- a/web/static/templates/index.html
+++ b/web/static/templates/index.html
@@ -1,49 +1,194 @@
-<!DOCTYPE html>
-<html lang="en">
+<div class="site-wrapper">
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{{PROJECT_TITLE}}</title>
+    <div class="cover-container">
 
-    <link href="/static/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/static/bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="/static/bower_components/datatables/media/css/jquery.dataTables.min.css" rel="stylesheet">
+        <div class="row">
+            <div class="col-lg-12">
+                <h2 class="page-header">{{PROJECT_TITLE}} - studencka wymiana wiedzy</h2>
+                <p class="lead">Kujon to system pozwalający na przeglądanie danych USOS na smartphonie, wymianę danych
+                    oraz komunikację. Integrujemy się z Facebookiem oraz z największymi polskimi uczelniami.</p>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="/static/img/logo/logo-pb-64x64.jpg" alt="Politechnika Białostocka">
+                </a>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="/static/img/logo/logo-pw-64x64.jpg" alt="Politechnika Warszawska">
+                </a>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="/static/img/logo/logo-pwsz-64x64.jpg"
+                         alt="Państwowa Wyższa Szkoła Zawodowa w Elblągu">
+                </a>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="/static/img/logo/logo-uam-64x64.jpg"
+                         alt="Uniwersytet Adama Mickiewicza w Poznaniu">
+                </a>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="/static/img/logo/logo-uj-64x64.jpg" alt="Uniwersytet Jagieloński">
+                </a>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="/static/img/logo/logo-uw-64x64.jpg" alt="Uniwersytet Warszawski">
+                </a>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="/static/img/logo/logo-wat-64x64.jpg"
+                         alt="Wojskowa Akademia Techniczna">
+                </a>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="/static/img/logo/logo-awfkat-64x64.jpg"
+                         alt="Akademia Wychowania Fizycznego w Katowicach">
+                </a>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="/static/img/logo/logo-prz-64x64.jpg" alt="Politechnika Rzeszowska">
+                </a>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="/static/img/logo/logo-ps-64x64.jpg"
+                         alt="Politechnika Świętokrzyska w Kielcach">
+                </a>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="/static/img/logo/logo-ukw-64x64.jpg"
+                         alt="Uniwersytet Kazimierza Wielkiego w Bydgoszczy">
+                </a>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="/static/img/logo/logo-umk-64x64.jpg"
+                         alt="Uniwersytet Mikołaja Kopernika w Toruniu">
+                </a>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="/static/img/logo/logo-uwb-64x64.jpg"
+                         alt="Uniwersytet w Białymstoku">
+                </a>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="/static/img/logo/logo-ul-64x64.jpg" alt="Uniwersytet Łódzki">
+                </a>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="/static/img/logo/logo-uo-64x64.jpg" alt="Uniwersytet Opolski">
+                </a>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="/static/img/logo/logo-us-64x64.jpg"
+                         alt="Uniwersytet Śląski w Katowicach">
+                </a>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="/static/img/logo/logo-ue-64x64.jpg"
+                         alt="Uniwersytet Ekonomiczny we Wrocławiu">
+                </a>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="/static/img/logo/logo-uniwroc-64x64.jpg"
+                         alt="Uniwersytet Wrocławski">
+                </a>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="/static/img/logo/logo-utp-64x64.jpg"
+                         alt="Uniwersytet Technologiczno-Przyrodniczy w Bydgoszczy">
+                </a>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="/static/img/logo/logo-uwm-64x64.jpg"
+                         alt="Uniwersytet Warmińsko-Mazurski w Olsztynie">
+                </a>
+            </div>
+
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a class="thumbnail" href="#">
+                    <img class="img-responsive" src="/static/img/logo/logo-uth-64x64.jpg"
+                         alt="Uczelnia Techniczno-Handlowa im. Heleny Chodkowskiej">
+                </a>
+            </div>
+
+        </div>
+
+        <div class="row">
+
+            <div class="inner cover ">
+                <h2 class="cover-heading">Pobierz wersję mobilną</h2>
+                <p class="lead">Z {{PROJECT_TITLE}} możesz korzystać na spartfonie i w dowolnej przeglądarce.</p>
+            </div>
 
 
-    <link href="/static/css/main.css" rel="stylesheet">
-    <link rel="shortcut icon" href="/static/favicon.ico">
+            <div class="col-md-4">
+                <a class="link-name" href="https://itunes.apple.com/pl/app/mobi.kujon">
+                    <div class="text-box" role="group">
+                        <div class="text" role="textbox">
+                            <p><a href="https://play.google.com/store/apps/details?id=mobi.kujon" target="_blank"><img
+                                    src="/static/img/pobierz-z-google-play.png" alt=""/></a>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-4">
+                <a class="link-name" href="https://play.google.com/store/apps/details?id=mobi.kujon">
+                    <div class="text-box" role="group">
+                        <div class="text" role="textbox">
+                            <p><a href="https://play.google.com/store/apps/details?id=mobi.kujon" target="_blank"><img
+                                    src="/static/img/pobierz-z-app-store.png" alt=""/></a>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <!--<div class="col-md-4">-->
+            <!--<a class="link-name" href="http://apps.microsoft.com/windows/pl-pl/app/kujon-io"  >-->
+            <!--<div class="text-box" role="group">-->
+            <!--<div class="text" role="textbox" >-->
+            <!--<p><a href="https://play.google.com/store/apps/details?id=io.kujon" target="_blank"><img src="/static/img/pobierz-z-windows-phone-store.png" alt="" /></a>-->
+            <!--</div>-->
+            <!--</div>-->
+            <!--</a>-->
+            <!--</div>-->
+        </div>
 
-    <link rel="stylesheet" href="/static/bower_components/fullcalendar/dist/fullcalendar.min.css"/>
-
-    <script type="text/javascript" src="/static/require.config.js"></script>
-    <script type="text/javascript" data-main="/static/js/startup.js"
-            src="/static/bower_components/requirejs/require.js"></script>
-</head>
-
-<body>
-<!-- navigation -->
-<div id="navigation">
-</div>
-
-
-<!-- pages -->
-<div id="page" class="container">
-</div>
-
-{% block main %} {% end %}
-
-<footer class="footer">
-    <div class="container text-center">
-        <p class="text-muted">
-            {{PROJECT_TITLE}} © 2016 |
-            <a href="#disclaimer">regulamin </a> |
-            <a href="mailto:kujon@kujon.mobi"><i class="fa fa-envelope"></i></a> |
-            <a href="https://facebook.com/kujon.mobi"><i class="fa fa-facebook"></i></a> |
-            <a href="https://play.google.com/store/apps/details?id=mobi.kujon"><i class="fa fa-android"></i></a>
-        </p>
     </div>
-</footer>
-</body>
-
-</html>
+</div>
