--- a/web/static/templates/home.html
+++ b/web/static/templates/home.html
@@ -1,45 +1,38 @@
 <div class="row row-offcanvas row-offcanvas-right">
 
-<div class="col-xs-12 col-sm-9">
-  <p class="pull-right visible-xs">
-    <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Toggle nav</button>
-  </p>
+<div class="col-xs-12 col-sm-12">
+
   <div class="jumbotron">
     <h1>Witamy w kujonie!</h1>
     <p>Dziękujemy za rejestrację, masz teraz podgląd do swoich danych w USOS.</p>
   </div>
   <div class="row">
-    <div class="col-xs-6 col-lg-4">
-      <h2>Heading</h2>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div><!--/.col-xs-6.col-lg-4-->
-    <div class="col-xs-6 col-lg-4">
-      <h2>Heading</h2>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div><!--/.col-xs-6.col-lg-4-->
-    <div class="col-xs-6 col-lg-4">
-      <h2>Heading</h2>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-      <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div><!--/.col-xs-6.col-lg-4-->
-  </div><!--/row-->
-</div><!--/.col-xs-12.col-sm-9-->
-
-<div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
-  <div class="list-group">
-    <a href="#" class="list-group-item active">Link</a>
-    <a href="#" class="list-group-item">Link</a>
-    <a href="#" class="list-group-item">Link</a>
-    <a href="#" class="list-group-item">Link</a>
-    <a href="#" class="list-group-item">Link</a>
-    <a href="#" class="list-group-item">Link</a>
-    <a href="#" class="list-group-item">Link</a>
-    <a href="#" class="list-group-item">Link</a>
-    <a href="#" class="list-group-item">Link</a>
-    <a href="#" class="list-group-item">Link</a>
+    <div class="col-xs-12 col-md-4">
+      <h2>Dane z USOSa</h2>
+      <p>Dzięki temu że Twoja uczelnia udostępniła USOSa i pozwoliła na integrację w kujonie masz możliwość
+        przeglądania swoich przedmiotów, ocen, kontaktu do swoich nauczycieli a także planu zajęć. Wraz z rozwojem
+        kujona będziemy starać sie dodawać nowe funkcjonalności, aby kujon był Twoim ulubionym programem do wymianany
+        informacji z uczelnią..
+      </p>
+    </div>
+    <div class="col-xs-12 col-md-4">
+      <h2>Wersja mobilna</h2>
+      <p>Kujon to przede wszystkim aplikacja moblina. W tej chwili obsługujemy tylko platformę Android, ale w
+        najbliższym czasie planujemy wdrożenie wersji na IOS oraz Windows Phone. </p>
+      <p><a class="link-name" href="https://itunes.apple.com/pl/app/mobi.kujon"></a><a href="https://play.google.com/store/apps/details?id=mobi.kujon" target="_blank"><img src="/static/img/pobierz-z-google-play.png" alt=""></a>
+      </p>
+    </div>
+    <div class="col-xs-12 col-md-4">
+      <h2>Integracja z FB</h2>
+      <p>Poprzez integrację z Twoim kontem na Facebooku już niedługo będziesz mógł zapisać się na grupę związaną z
+        Twoimi zajęciami i rozmawiać ze znajomymi z jednej grupy. Kujon pomoże połączyć Ci kontakty z uczelni z
+      tymi z facebooka.
+      <button class="btn btn-primary" href="https://facebook.com/kujon.mobi"><i class="fa fa-thumbs-up">
+        Polub Kujona!</i> </button>
+      </p>
+    </div>
   </div>
-</div><!--/.sidebar-offcanvas-->
-</div><!--/row-->
-</div><!--/.container-->
+</div>
+</div>
+</div>
+</div>
