--- a/web/static/templates/index.html
+++ b/web/static/templates/index.html
@@ -8,144 +8,136 @@
                 <p class="lead">Kujon to system pozwalający na przeglądanie danych USOS na smartphonie, wymianę danych
                     oraz komunikację. Integrujemy się z Facebookiem oraz z największymi polskimi uczelniami.</p>
             </div>
+        </div>
 
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/static/img/logo/logo-pb-64x64.jpg" alt="Politechnika Białostocka">
+        <div class="row">
+
+            <div class="col-md-2 col-xs-4 thumb">
+                <a class="thumbnail" href="#" title="Politechnika Białostocka">
+                    <img class="img-responsive" src="/static/img/logo/logo-pb-64x64.jpg" >
                 </a>
             </div>
 
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/static/img/logo/logo-pw-64x64.jpg" alt="Politechnika Warszawska">
+            <div class="col-md-2 col-xs-4 thumb">
+                <a class="thumbnail" href="#" title="Politechnika Warszawska">
+                    <img class="img-responsive" src="/static/img/logo/logo-pw-64x64.jpg" >
                 </a>
             </div>
 
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/static/img/logo/logo-pwsz-64x64.jpg"
-                         alt="Państwowa Wyższa Szkoła Zawodowa w Elblągu">
+            <div class="col-md-2 col-xs-4 thumb">
+                <a class="thumbnail" href="#" title="Państwowa Wyższa Szkoła Zawodowa w Elblągu">
+                    <img class="img-responsive" src="/static/img/logo/logo-pwsz-64x64.jpg">
                 </a>
             </div>
 
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/static/img/logo/logo-uam-64x64.jpg"
-                         alt="Uniwersytet Adama Mickiewicza w Poznaniu">
+            <div class="col-md-2 col-xs-4 thumb">
+                <a class="thumbnail" href="#" title="Uniwersytet Adama Mickiewicza w Poznaniu">
+                    <img class="img-responsive" src="/static/img/logo/logo-uam-64x64.jpg">
                 </a>
             </div>
 
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/static/img/logo/logo-uj-64x64.jpg" alt="Uniwersytet Jagieloński">
+            <div class="col-md-2 col-xs-4 thumb">
+                <a class="thumbnail" href="#" title="Uniwersytet Jagieloński">
+                    <img class="img-responsive" src="/static/img/logo/logo-uj-64x64.jpg" >
                 </a>
             </div>
 
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/static/img/logo/logo-uw-64x64.jpg" alt="Uniwersytet Warszawski">
+            <div class="col-md-2 col-xs-4 thumb">
+                <a class="thumbnail" href="#" title="Uniwersytet Warszawski">
+                    <img class="img-responsive" src="/static/img/logo/logo-uw-64x64.jpg" >
                 </a>
             </div>
 
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/static/img/logo/logo-wat-64x64.jpg"
-                         alt="Wojskowa Akademia Techniczna">
+            <div class="col-md-2 col-xs-4 thumb">   
+                <a class="thumbnail" href="#" title="Wojskowa Akademia Techniczna">
+                    <img class="img-responsive" src="/static/img/logo/logo-wat-64x64.jpg">
                 </a>
             </div>
 
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/static/img/logo/logo-awfkat-64x64.jpg"
-                         alt="Akademia Wychowania Fizycznego w Katowicach">
+            <div class="col-md-2 col-xs-4 thumb">
+                <a class="thumbnail" href="#" title="Akademia Wychowania Fizycznego w Katowicach">
+                    <img class="img-responsive" src="/static/img/logo/logo-awfkat-64x64.jpg">
                 </a>
             </div>
 
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/static/img/logo/logo-prz-64x64.jpg" alt="Politechnika Rzeszowska">
+            <div class="col-md-2 col-xs-4 thumb">
+                <a class="thumbnail" href="#" title="Politechnika Rzeszowska">
+                    <img class="img-responsive" src="/static/img/logo/logo-prz-64x64.jpg" >
                 </a>
             </div>
 
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/static/img/logo/logo-ps-64x64.jpg"
-                         alt="Politechnika Świętokrzyska w Kielcach">
+            <div class="col-md-2 col-xs-4 thumb">
+                <a class="thumbnail" href="#" title="Politechnika Świętokrzyska w Kielcach">
+                    <img class="img-responsive" src="/static/img/logo/logo-ps-64x64.jpg">
                 </a>
             </div>
 
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/static/img/logo/logo-ukw-64x64.jpg"
-                         alt="Uniwersytet Kazimierza Wielkiego w Bydgoszczy">
+            <div class="col-md-2 col-xs-4 thumb">
+                <a class="thumbnail" href="#" title="Uniwersytet Kazimierza Wielkiego w Bydgoszczy">
+                    <img class="img-responsive" src="/static/img/logo/logo-ukw-64x64.jpg">
                 </a>
             </div>
 
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/static/img/logo/logo-umk-64x64.jpg"
-                         alt="Uniwersytet Mikołaja Kopernika w Toruniu">
+            <div class="col-md-2 col-xs-4 thumb">
+                <a class="thumbnail" href="#" title="Uniwersytet Mikołaja Kopernika w Toruniu">
+                    <img class="img-responsive" src="/static/img/logo/logo-umk-64x64.jpg">
                 </a>
             </div>
 
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/static/img/logo/logo-uwb-64x64.jpg"
-                         alt="Uniwersytet w Białymstoku">
+            </div>
+            <div class="row">
+
+            <div class="col-md-2 col-xs-4 thumb">
+                <a class="thumbnail" href="#" title="Uniwersytet Łódzki">
+                    <img class="img-responsive" src="/static/img/logo/logo-ul-64x64.jpg" >
                 </a>
             </div>
 
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/static/img/logo/logo-ul-64x64.jpg" alt="Uniwersytet Łódzki">
+            <div class="col-md-2 col-xs-4 thumb">
+                <a class="thumbnail" href="#" title="Uniwersytet Opolski">
+                    <img class="img-responsive" src="/static/img/logo/logo-uo-64x64.jpg" >
                 </a>
             </div>
 
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/static/img/logo/logo-uo-64x64.jpg" alt="Uniwersytet Opolski">
+            <div class="col-md-2 col-xs-4 thumb">
+                <a class="thumbnail" href="#" title="Uniwersytet Śląski w Katowicach">
+                    <img class="img-responsive" src="/static/img/logo/logo-us-64x64.jpg">
                 </a>
             </div>
 
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/static/img/logo/logo-us-64x64.jpg"
-                         alt="Uniwersytet Śląski w Katowicach">
+            <div class="col-md-2 col-xs-4 thumb">
+                <a class="thumbnail" href="#" title="Uniwersytet Ekonomiczny we Wrocławiu">
+                    <img class="img-responsive" src="/static/img/logo/logo-ue-64x64.jpg">
                 </a>
             </div>
 
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/static/img/logo/logo-ue-64x64.jpg"
-                         alt="Uniwersytet Ekonomiczny we Wrocławiu">
+            <div class="col-md-2 col-xs-4 thumb">
+                <a class="thumbnail" href="#" title="Uniwersytet Wrocławski">
+                    <img class="img-responsive" src="/static/img/logo/logo-uniwroc-64x64.jpg">
                 </a>
             </div>
 
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/static/img/logo/logo-uniwroc-64x64.jpg"
-                         alt="Uniwersytet Wrocławski">
+            <div class="col-md-2 col-xs-4 thumb">
+                <a class="thumbnail" href="#" title="Uniwersytet Technologiczno-Przyrodniczy w Bydgoszczy">
+                    <img class="img-responsive" src="/static/img/logo/logo-utp-64x64.jpg">
                 </a>
             </div>
 
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/static/img/logo/logo-utp-64x64.jpg"
-                         alt="Uniwersytet Technologiczno-Przyrodniczy w Bydgoszczy">
+            <div class="col-md-2 col-xs-4 thumb">
+                <a class="thumbnail" href="#" title="Uniwersytet Warmińsko-Mazurski w Olsztynie">
+                    <img class="img-responsive" src="/static/img/logo/logo-uwm-64x64.jpg">
                 </a>
             </div>
 
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/static/img/logo/logo-uwm-64x64.jpg"
-                         alt="Uniwersytet Warmińsko-Mazurski w Olsztynie">
+            <div class="col-md-2 col-xs-4 thumb">
+                <a class="thumbnail" href="#" title="Uczelnia Techniczno-Handlowa im. Heleny Chodkowskiej">
+                    <img class="img-responsive" src="/static/img/logo/logo-uth-64x64.jpg">
                 </a>
             </div>
-
-            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
-                <a class="thumbnail" href="#">
-                    <img class="img-responsive" src="/static/img/logo/logo-uth-64x64.jpg"
-                         alt="Uczelnia Techniczno-Handlowa im. Heleny Chodkowskiej">
+            
+            <div class="col-md-2 col-xs-4 thumb">
+                <a class="thumbnail" href="#" title="Uniwersytet w Białymstoku">
+                    <img class="img-responsive" src="/static/img/logo/logo-uwb-64x64.jpg">
                 </a>
             </div>
 
@@ -164,7 +156,7 @@
                     <div class="text-box" role="group">
                         <div class="text" role="textbox">
                             <p><a href="https://play.google.com/store/apps/details?id=mobi.kujon" target="_blank"><img
-                                    src="/static/img/pobierz-z-google-play.png" alt=""/></a>
+                                    src="/static/img/pobierz-z-google-play.png" title=""/></a>
                         </div>
                     </div>
                 </a>
@@ -174,7 +166,7 @@
                     <div class="text-box" role="group">
                         <div class="text" role="textbox">
                             <p><a href="https://play.google.com/store/apps/details?id=mobi.kujon" target="_blank"><img
-                                    src="/static/img/pobierz-z-app-store.png" alt=""/></a>
+                                    src="/static/img/pobierz-z-app-store.png" title=""/></a>
                         </div>
                     </div>
                 </a>
@@ -183,12 +175,11 @@
             <!--<a class="link-name" href="http://apps.microsoft.com/windows/pl-pl/app/kujon-io"  >-->
             <!--<div class="text-box" role="group">-->
             <!--<div class="text" role="textbox" >-->
-            <!--<p><a href="https://play.google.com/store/apps/details?id=io.kujon" target="_blank"><img src="/static/img/pobierz-z-windows-phone-store.png" alt="" /></a>-->
+            <!--<p><a href="https://play.google.com/store/apps/details?id=io.kujon" target="_blank"><img src="/static/img/pobierz-z-windows-phone-store.png" title="" /></a>-->
             <!--</div>-->
             <!--</div>-->
             <!--</a>-->
             <!--</div>-->
         </div>
-
     </div>
 </div>
