fixes realted to merge problems.

--- a/web/static/templates/index.html
+++ b/web/static/templates/index.html
@@ -4,141 +4,21 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">{{PROJECT_TITLE}} - studencka wymiana wiedzy</h2>
+                <h2 class="page-header">Kujon - studencka wymiana wiedzy</h2>
                 <p class="lead">Kujon to system pozwalający na przeglądanie danych USOS na smartphonie, wymianę danych
                     oraz komunikację. Integrujemy się z Facebookiem oraz z największymi polskimi uczelniami.</p>
             </div>
         </div>
 
         <div class="row">
-            <div class="col-md-2 col-xs-4 thumb">
-                <a class="thumbnail" href="#" title="Politechnika Białostocka">
-                    <img class="img-responsive" src="/static/img/logo/logo-pb-64x64.jpg" >
-                </a>
-            </div>
 
-            <div class="col-md-2 col-xs-4 thumb">
-                <a class="thumbnail" href="#" title="Politechnika Warszawska">
-                    <img class="img-responsive" src="/static/img/logo/logo-pw-64x64.jpg" >
+            {{#data}}
+            <div class="col-md-1 col-xs-4 thumb">
+                <a class="thumbnail" href="#" title="{{name}}">
+                    <img class="img-responsive" src="{{logo}}" >
                 </a>
             </div>
-
-            <div class="col-md-2 col-xs-4 thumb">
-                <a class="thumbnail" href="#" title="Państwowa Wyższa Szkoła Zawodowa w Elblągu">
-                    <img class="img-responsive" src="/static/img/logo/logo-pwsz-64x64.jpg">
-                </a>
-            </div>
-
-            <div class="col-md-2 col-xs-4 thumb">
-                <a class="thumbnail" href="#" title="Uniwersytet Adama Mickiewicza w Poznaniu">
-                    <img class="img-responsive" src="/static/img/logo/logo-uam-64x64.jpg">
-                </a>
-            </div>
-
-            <div class="col-md-2 col-xs-4 thumb">
-                <a class="thumbnail" href="#" title="Uniwersytet Jagieloński">
-                    <img class="img-responsive" src="/static/img/logo/logo-uj-64x64.jpg" >
-                </a>
-            </div>
-
-            <div class="col-md-2 col-xs-4 thumb">
-                <a class="thumbnail" href="#" title="Uniwersytet Warszawski">
-                    <img class="img-responsive" src="/static/img/logo/logo-uw-64x64.jpg" >
-                </a>
-            </div>
-
-            <div class="col-md-2 col-xs-4 thumb">   
-                <a class="thumbnail" href="#" title="Wojskowa Akademia Techniczna">
-                    <img class="img-responsive" src="/static/img/logo/logo-wat-64x64.jpg">
-                </a>
-            </div>
-
-            <div class="col-md-2 col-xs-4 thumb">
-                <a class="thumbnail" href="#" title="Akademia Wychowania Fizycznego w Katowicach">
-                    <img class="img-responsive" src="/static/img/logo/logo-awfkat-64x64.jpg">
-                </a>
-            </div>
-
-            <div class="col-md-2 col-xs-4 thumb">
-                <a class="thumbnail" href="#" title="Politechnika Rzeszowska">
-                    <img class="img-responsive" src="/static/img/logo/logo-prz-64x64.jpg" >
-                </a>
-            </div>
-
-            <div class="col-md-2 col-xs-4 thumb">
-                <a class="thumbnail" href="#" title="Politechnika Świętokrzyska w Kielcach">
-                    <img class="img-responsive" src="/static/img/logo/logo-ps-64x64.jpg">
-                </a>
-            </div>
-
-            <div class="col-md-2 col-xs-4 thumb">
-                <a class="thumbnail" href="#" title="Uniwersytet Kazimierza Wielkiego w Bydgoszczy">
-                    <img class="img-responsive" src="/static/img/logo/logo-ukw-64x64.jpg">
-                </a>
-            </div>
-
-            <div class="col-md-2 col-xs-4 thumb">
-                <a class="thumbnail" href="#" title="Uniwersytet Mikołaja Kopernika w Toruniu">
-                    <img class="img-responsive" src="/static/img/logo/logo-umk-64x64.jpg">
-                </a>
-            </div>
-
-            </div>
-            <div class="row">
-
-            <div class="col-md-2 col-xs-4 thumb">
-                <a class="thumbnail" href="#" title="Uniwersytet Łódzki">
-                    <img class="img-responsive" src="/static/img/logo/logo-ul-64x64.jpg" >
-                </a>
-            </div>
-
-            <div class="col-md-2 col-xs-4 thumb">
-                <a class="thumbnail" href="#" title="Uniwersytet Opolski">
-                    <img class="img-responsive" src="/static/img/logo/logo-uo-64x64.jpg" >
-                </a>
-            </div>
-
-            <div class="col-md-2 col-xs-4 thumb">
-                <a class="thumbnail" href="#" title="Uniwersytet Śląski w Katowicach">
-                    <img class="img-responsive" src="/static/img/logo/logo-us-64x64.jpg">
-                </a>
-            </div>
-
-            <div class="col-md-2 col-xs-4 thumb">
-                <a class="thumbnail" href="#" title="Uniwersytet Ekonomiczny we Wrocławiu">
-                    <img class="img-responsive" src="/static/img/logo/logo-ue-64x64.jpg">
-                </a>
-            </div>
-
-            <div class="col-md-2 col-xs-4 thumb">
-                <a class="thumbnail" href="#" title="Uniwersytet Wrocławski">
-                    <img class="img-responsive" src="/static/img/logo/logo-uniwroc-64x64.jpg">
-                </a>
-            </div>
-
-            <div class="col-md-2 col-xs-4 thumb">
-                <a class="thumbnail" href="#" title="Uniwersytet Technologiczno-Przyrodniczy w Bydgoszczy">
-                    <img class="img-responsive" src="/static/img/logo/logo-utp-64x64.jpg">
-                </a>
-            </div>
-
-            <div class="col-md-2 col-xs-4 thumb">
-                <a class="thumbnail" href="#" title="Uniwersytet Warmińsko-Mazurski w Olsztynie">
-                    <img class="img-responsive" src="/static/img/logo/logo-uwm-64x64.jpg">
-                </a>
-            </div>
-
-            <div class="col-md-2 col-xs-4 thumb">
-                <a class="thumbnail" href="#" title="Uczelnia Techniczno-Handlowa im. Heleny Chodkowskiej">
-                    <img class="img-responsive" src="/static/img/logo/logo-uth-64x64.jpg">
-                </a>
-            </div>
-            
-            <div class="col-md-2 col-xs-4 thumb">
-                <a class="thumbnail" href="#" title="Uniwersytet w Białymstoku">
-                    <img class="img-responsive" src="/static/img/logo/logo-uwb-64x64.jpg">
-                </a>
-            </div>
+            {{/data}}
 
         </div>
 
