--- a/web/static/templates/register.html
+++ b/web/static/templates/register.html
@@ -9,7 +9,7 @@
 
 
         {{#data}}
-        <div class="col-lg-3 col-md-4 col-xs-6 thumb" >
+        <div class="col-md-2 col-xs-4  thumb" >
             <a class="thumbnail user-register-form" href="#" data-usosId="{{usos_id}}">
                 <img class="img-responsive" src="{{logo}}" alt="{{name}}">
                 <div class="caption"><strong>{{name}}</strong></div>
