--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -26,10 +26,13 @@
 <div id="navigation">
 </div>
 
+{% block main %}
+{% end %}
 
 <!-- pages -->
 <div id="page" class="container">
 </div>
+
 <hr>
 <footer class="footer">
   <div class="container text-center">
