https://github.com/kujonmobi/kujon-server/issues/38

--- a/web/static/templates/modal_lecturer.html
+++ b/web/static/templates/modal_lecturer.html
@@ -20,7 +20,7 @@
                         <table class="table table-strip table-responsive">
                             <tr>
                                 <td>Tytuł</td>
-                                <td>{{titles.before}}{{DEPLOY_URL}}</td>
+                                <td>{{titles.before}}</td>
                                 <td></td>
                             </tr>
                             <tr>
