--- a/web/templates/error.html
+++ b/web/templates/error.html
@@ -5,7 +5,7 @@
         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span>
         </button>
         <h4>Oh snap!</h4>
-        <p>{{message}}</p>
+        <p>{{MESSAGE}}</p>
     </div>
 </div>
 {% end %}
